# generator-rs

./: .gitignore  Cargo.toml  README.md  public_key.json
benches/: 01_generator_bench_2_options.rs  02_generator_bench_3_options.rs  03_generator_bench_4_options.rs
docs/: search-index.js
docs/generator_rs/: index.html
docs/generator_rs/generator/: Uciv.t.html  index.html  sidebar-items.js  struct.Generator.html  struct.Uciv.html
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/marker/: trait.Send.js  trait.Sync.js
docs/src/generator_rs/: generator.rs.html  lib.rs.html  main.rs.html
src/: generator.rs  lib.rs  main.rs
