[package]
name = "generator_rs"
version = "0.1.0"
authors = ["Raphael Matile <raphael.matile@gmail.com>"]
exclude = ["benches/*"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = "2.26.0"
log = "0.4"
env_logger = "0.5.13"
pretty_env_logger = "0.2"
crypto-rs = { git = "https://github.com/provotum/crypto-rs.git", branch = "master" }
num = "0.2.0"